out/production/WorkTask/objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>IsValidForRent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsValidForRent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IF(
 NOT(ISPICKVAL( Type__c , &apos;&apos;)) &amp;&amp;  IsValidForRent__c,
 CASE(Type__c,
 &apos;Sedan&apos;,IMAGE(&apos;https://www.smailauto.com/assets/stock/colormatched/white/640/cc_2018hoc020029_640/cc_2018hoc020029_640_si.jpg&apos;, &apos;Sedan&apos;),
 &apos;Minivan&apos;, IMAGE(&apos;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmzcAeCHcfiuH4IbDkZoeAtal8cVDOJ_pj1306gSqyt6qs6u62pA&apos;, &apos;Minivan&apos;),
 &apos;Hatchback&apos;, IMAGE(&apos;https://www.mazdausa.com/siteassets/vehicles/2018/m3h/vlp/studio-360s/soul-red/my18_m3h_gt_41v_soul_red-06.jpg&apos;, &apos;Hatchback&apos;),
  &apos;no car available&apos;
 ),
 &apos;no car available&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsValidForRent__c</columns>
        <columns>Photo__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidForWord</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(LOWER(Name), LOWER($Setup.validWord__c.Word__c))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Do not allow text &quot;Fish&quot; to appear in Name field))</errorMessage>
    </validationRules>
</CustomObject>